--- a/Gal3DEngine/Gal3DEngine.csproj
+++ b/Gal3DEngine/Gal3DEngine.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Screen.cs" />
     <Compile Include="Shader.cs" />
     <Compile Include="TestModel.cs" />
+    <Compile Include="VertexColor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
