--- a/Gal3DEngine/Gal3DEngine.csproj
+++ b/Gal3DEngine/Gal3DEngine.csproj
@@ -64,6 +64,8 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Color3.cs" />
+    <Compile Include="IndicesTypes\IndexPositionUV.cs" />
+    <Compile Include="IndicesTypes\IndexPositionUVNormal.cs" />
     <Compile Include="Shaders\ShaderFlat.cs" />
     <Compile Include="Shaders\ShaderPhong.cs" />
     <Compile Include="Shaders\ShaderUV.cs" />
