--- a/Gal3DEngine/Gal3DEngine.csproj
+++ b/Gal3DEngine/Gal3DEngine.csproj
@@ -64,6 +64,7 @@
   <ItemGroup>
     <Compile Include="Camera.cs" />
     <Compile Include="Color3.cs" />
+    <Compile Include="Gizmos\AxisGizmo.cs" />
     <Compile Include="IndicesTypes\IndexPosition.cs" />
     <Compile Include="IndicesTypes\IndexPositionUV.cs" />
     <Compile Include="IndicesTypes\IndexPositionUVNormal.cs" />
@@ -77,7 +78,6 @@
     <Compile Include="VertexUV.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Model.cs" />
-    <Compile Include="Point2i.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Screen.cs" />
