--- a/DanielFlappyGame/DanielFlappyGame.csproj
+++ b/DanielFlappyGame/DanielFlappyGame.csproj
@@ -54,7 +54,7 @@
     <Compile Include="GameUtils\Button.cs" />
     <Compile Include="GameUtils\Label.cs" />
     <Compile Include="GameUtils\Rectangle.cs" />
-    <Compile Include="GameUtils\UITool.cs" />
+    <Compile Include="GameUtils\ToolsHelper.cs" />
     <Compile Include="HighScoresManager.cs" />
     <Compile Include="MenuWorld.cs" />
     <Compile Include="PipesManager.cs" />
@@ -81,6 +81,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\BrickRound0108_5_S.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\btnBackGround.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\road_damaged_0049_01_s.jpg">
