--- a/DanielFlappyGame/DanielFlappyGame.csproj
+++ b/DanielFlappyGame/DanielFlappyGame.csproj
@@ -60,6 +60,8 @@
     <Compile Include="PipesManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renders\AnimationRender.cs" />
+    <Compile Include="Renders\Renderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gal3DEngine\Gal3DEngine.csproj">
