--- a/Gal3DGame/Gal3DGame.csproj
+++ b/Gal3DGame/Gal3DGame.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MyGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RandomHelper.cs" />
     <Compile Include="Star.cs" />
   </ItemGroup>
   <ItemGroup>
