--- a/Gal3DEngine/Gal3DEngine.csproj
+++ b/Gal3DEngine/Gal3DEngine.csproj
@@ -100,7 +100,7 @@
     <None Include="Resources\Sasuke.obj" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Resources\ArialFontNew.bmp">
+    <Content Include="Resources\ArialFontNew.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\bear.jpg" />
