--- a/DanielFlappyGame/DanielFlappyGame.csproj
+++ b/DanielFlappyGame/DanielFlappyGame.csproj
@@ -46,6 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Environment.cs" />
+    <Compile Include="GameUtils\CubeMap.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Floor.cs" />
     <Compile Include="Entities\Pipe.cs" />
@@ -54,7 +56,7 @@
     <Compile Include="GameUtils\Button.cs" />
     <Compile Include="GameUtils\Label.cs" />
     <Compile Include="GameUtils\Rectangle.cs" />
-    <Compile Include="GameUtils\ToolsHelper.cs" />
+    <Compile Include="Renders\ToolsHelper.cs" />
     <Compile Include="HighScoresManager.cs" />
     <Compile Include="MenuWorld.cs" />
     <Compile Include="PipesManager.cs" />
@@ -71,6 +73,9 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <None Include="Resources\cloud.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Resources\CobbleStones2.obj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -78,6 +83,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Resources\flappy_bird.obj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Resources\sun.obj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="Resources\tunnel.obj">
@@ -88,13 +96,22 @@
     <Content Include="HighScores.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\anan.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\BrickRound0108_5_S.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\btnBackGround.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\CUBEMAP.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\flappyTexture.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Resources\SunText.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\HighScoresImg.png">
