--- a/DanielFlappyGame/DanielFlappyGame.csproj
+++ b/DanielFlappyGame/DanielFlappyGame.csproj
@@ -99,6 +99,9 @@
     <Content Include="Resources\anan.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Resources\BackBtn.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Resources\BrickRound0108_5_S.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
